fix header styling

--- a/index.html
+++ b/index.html
@@ -544,6 +544,14 @@
       max-width: 1280px;
       position: relative;
     } */
+    .nav {
+      position: fixed;
+      max-width: 1000px;
+    }
+    .section-hero__title {
+      position: fixed;
+      padding-top: 199px;
+    }
     .section-hero {
       height: 947px;
     }
