--- a/index.html
+++ b/index.html
@@ -730,9 +730,8 @@
     gsap.set(lineContainer, {top: lineContainerOffset});
     gsap.set(line, {drawSVG: 0});
 
-    // sentences
+    // timing
     sentences.forEach((sentence, j) => {
-      const chars = sentence.querySelectorAll('.cls-2 > .cls-3');
       let delay = 0;
       for(let k = 0; k <= j; k++) {
         delay += charStagger * (charsArray[k].length);
@@ -745,9 +744,12 @@
         delay -= charStagger * (charsArray[j + 1].length);
       else delay -= charStagger * (charsArray[j].length);
       let delayAfter = delay + charStagger * (charsArray[j].length);
+      let length = delayAfter - delay;
+    });
 
-      console.log('delay: ' + delay / charStagger + ' | ' + 'delayAfter: ' + delayAfter / charStagger + ' | ' + 'Sub: ' + ((delayAfter / charStagger) - (delay / charStagger)))
-      console.log('========')
+    // sentences
+    sentences.forEach((sentence, j) => {
+      const chars = sentence.querySelectorAll('.cls-2 > .cls-3');
       gsap.utils.toArray(chars).forEach((char, i) => {
         // show sentence
         timeline.fromTo(char, {drawSVG: 0}, {
