--- a/index.html
+++ b/index.html
@@ -757,6 +757,8 @@
     // sentences
     sentences.forEach((sentence, j) => {
       const chars = sentence.querySelectorAll('.cls-2 > .cls-3');
+      let delay = timing[j].delay;
+      let delayAfter = timing[j].delayAfter;
       gsap.utils.toArray(chars).forEach((char, i) => {
         // show sentence
         timeline.fromTo(char, {drawSVG: 0}, {
@@ -764,7 +766,7 @@
           drawSVG: '100%',
           scrollTrigger: {
             trigger: 'body',
-            start: charStagger * i + delay,
+            start: delay + (charStagger * i),
             end: `+=${charTime}`,
             scrub: 1,
 
@@ -775,7 +777,7 @@
                 drawSVG: '100% 100%',
                 scrollTrigger: {
                   trigger: 'body',
-                  start: charStagger * i + delayAfter,
+                  start: delayAfter + (charStagger * i),
                   end: `+=${charTime}`,
                   scrub: 1
                 }
