--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
     #catalyst-for-change,
     #co-creator-of-vision,
     #your-change-agent {
-      z-index: 1000;
+      z-index: 499;
       position: fixed;
       top: 350px;
       left: 50%;
@@ -924,6 +924,7 @@
       let delayAfter = delay + charStagger * (charsArray[j].length);
       delayAfter += 1500;
       let length = delayAfter - delay;
+      length -= j < sentences.length - 1 ? 0 : 1500;
       let complete = charTime + delayAfter + length;
       complete -= j < sentences.length - 1 ? 0 : 1500;
 
@@ -967,16 +968,18 @@
 
             // hide sentence
             onLeave: function(e) {
-              timeline.fromTo(char, {drawSVG: '100%'}, {
-                duration: 1.5,
-                drawSVG: '100% 100%',
-                scrollTrigger: {
-                  trigger: 'body',
-                  start: delayAfter + (charStagger * i),
-                  end: `+=${charTime}`,
-                  scrub: 1
-                }
-              });
+              if(j < sentences.length - 1) {
+                timeline.fromTo(char, {drawSVG: '100%'}, {
+                  duration: 1.5,
+                  drawSVG: '100% 100%',
+                  scrollTrigger: {
+                    trigger: 'body',
+                    start: delayAfter + (charStagger * i),
+                    end: `+=${charTime}`,
+                    scrub: 1
+                  }
+                });
+              }
             }
           }
         });
