remove sandy effect

--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
   <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
   <script src="/DrawSVGPlugin.3.10.4.min.js"></script>
   <script src="/delaunay.js"></script>
-  <script src="/noise.js"></script>
+  <!-- <script src="/noise.js"></script> -->
   <script>
     window.addEventListener('load', () => {
     console.clear();
