make line not touch logo and social media

--- a/index.html
+++ b/index.html
@@ -571,7 +571,10 @@
 
     .nav {
       position: fixed;
-      max-width: 1200px;
+      max-width: 1250px;
+    }
+    .nav__social {
+      transform: translateX(32px);
     }
     .section-hero__title {
       position: fixed;
