decrease scroll animation speed

--- a/index.html
+++ b/index.html
@@ -876,9 +876,9 @@
 
     const timing = [];
     const charsArray = [];
-    const charTime = 200;
-    const charStagger = 50;
-    const visibilityTime = 1500;
+    const charTime = 200/1.35;
+    const charStagger = 50/1.35;
+    const visibilityTime = 1500/1.35;
     const sentencesSelector = [
       '#we-raise-your-value',
       '#catalyst-for-change',
