--- a/index.html
+++ b/index.html
@@ -578,7 +578,9 @@
     }
     .section-hero__title {
       position: fixed;
-      padding-top: 199px;
+      top: 50%;
+      margin-top: -151px;
+      padding-top: 0;
       white-space: nowrap;
     }
     .section-hero__title-sub {
