--- a/index.html
+++ b/index.html
@@ -582,6 +582,7 @@
       margin-top: -151px;
       padding-top: 0;
       white-space: nowrap;
+      transform: scale(1.3);
     }
     .section-hero__title-sub {
       letter-spacing: 10.3px;
